adding Category
